fix debt card text wrap on IE

--- a/citizens-guide/src/debt/analysis/_cards.scss
+++ b/citizens-guide/src/debt/analysis/_cards.scss
@@ -145,6 +145,7 @@
         flex-direction: column;
         justify-content: space-between;
         padding: 0;
+        width: 100%; // for IE
     }
 
     .card__flipper {
